syntax = "proto3";

package storage_object;

message UploadRequest {
    string file_path = 1;
    int64 start = 2;
    bytes bytes = 3;
}

message UploadResponse {
    string error = 1;
}

message DownloadRequest {
    string file_path = 1;
    int64 start = 2;
    int32 offset = 3;
}

message DownloadResponse {
    bytes bytes = 1;
    string error = 2;
}

// protoc --go_out=./ storage_object.proto
